# ros2_jaco_controller

./: CMakeLists.txt  Dockerfile  README.md  dockerscript.sh  experiment_notes.md  franka_ros_foxy.sh  gripper_actions.md  jaco_docker.sh  move_to_start_example_controller.cpp  package.xml  rqt_script.sh
config/: params copy.yaml  params.yaml
docker/: 1_dockerscript.sh  1b_buildandrun.sh  3_rqt_script.sh  Dockerfile
launch/: controller.launch.py  controller_only.launch.py  jaco_and_controller.launch.py  jaco_with_moveit.launch.py
my_jaco_controller/: CMakeLists.txt  package.xml
my_jaco_controller/docker/: 1_dockerscript.sh
my_jaco_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_jaco_controller/install/my_jaco_controller/share/my_jaco_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_jaco_controller/log/: latest_build
my_jaco_controller/scripts/: 02_simple_cartesian_velocity_controller.py  02b_relative_cartesian_velocity_controller.py  03b_rotation_fixed.py  04_cartesian_vel_with_rot.py  04b_rot_align_relative.py  04c_tuning.py  06_combo.py
my_jaco_controller/scripts/legacy/: cartesian_pos_pd_controller.py  cartesian_position_controller_service.py  x05_aligned_cartesian_vel.py
scripts/: all_purpose_controller.py  go_to_pose.py
scripts/legacy/: 01_service_example.py  02c_relative_cartesian_velocity_controller_with_fingers.py  03_cartesian_vel_rot_lock.py  04a_rot_align.py  05_integrate_rot.py  cartesian_pd_controller.py  cartesian_pos_p_controller.py  (+1 more)
(+6 files in other folders)
